tests/paczka1/small_fuzzy/18874440.err
Error in line 2: fRa9C A976 87,10
Error in line 5: xtRNSEt S356 28,67
Error in line 3: JoQJvDtW6Tb A976 33,7
